# ChangeLog for www-servers/pshs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/pshs/ChangeLog,v 1.1 2011/11/11 16:34:18 mgorny Exp $

*pshs-0.1 (11 Nov 2011)

  11 Nov 2011; Michał Górny <mgorny@gentoo.org> +pshs-0.1.ebuild,
  +metadata.xml:
  Add initial version of pretty simple HTTP server, a little CLI tool for file
  sharing.
