@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST pshs-0.1.tar.bz2 67344 RMD160 63bb19e5ec3ecf11b06e86a412185c697d57fd2c SHA1 ba5a7cf5c839b5a6029c72ee3a12156293e54848 SHA256 75b986b3cb3323e74eec307673480f3906a37a82b53d1368ef43457f348efc89
-EBUILD pshs-0.1.ebuild 716 RMD160 bdc79610a7e517ad94bdecdcd2e051b30b794028 SHA1 f04a848b014346dfc75f9f2ba760b2f4c40cb4e3 SHA256 736f6b58851a03418a4a1901ee388947a10f996f7dae81c2fc6563a5c2df1596
-MISC ChangeLog 406 RMD160 9421e1b635d7f6189a811653f93a83a5b95d5e95 SHA1 0177ea837e4a7470941dc2ecfaee591034bd5663 SHA256 03de5e104350171858605d35cb0bf6c9f25a89762d96a03447f440de99db7ee6
-MISC metadata.xml 745 RMD160 b5f130c6f0293fa5b54fbd426b8f496f77b86e1f SHA1 288749213c34971428cc76792bcd886ef5c3a043 SHA256 9f81348ab9acfbd5acb49af094bd8ce498dff6c98f297e51d1b24d8c1736d3d8
+DIST pshs-0.2.tar.bz2 71756 RMD160 c2ef615dbc693da329dd7ca15e7e166f985ace85 SHA1 680ab8ffc3a805263791ec2b986b81c7c24e062c SHA256 9e02ffb80aaa6e2d736999298ce7788dd4d549b407ae49a1964505153d2a46ac
+EBUILD pshs-0.2.ebuild 849 RMD160 420faf0bd7ddba03aa29d8430d52b974435f2122 SHA1 6862d5f996c9eb317da81e8fcd7a419bb1619194 SHA256 02d84651de00afc308bc08eb2331618f634d0408ae87c6269489884b62c2eee0
+MISC ChangeLog 727 RMD160 dc460df496203028aa8b034da48d3702e078154c SHA1 a6a998beb350e76291f93e1d5853df7c95c2dcda SHA256 b2ac5dc1bc36885824c3d45ddd3751e6172f5ae961eb2bbaa9c9114c5b5e5da7
+MISC metadata.xml 859 RMD160 b5d31d44e1c0a12a73752f3f173846e0d9fa9d42 SHA1 ef965b2618198c19ee074d3a55ed87675e16259c SHA256 27d7ef1dfad953bc4e072adcbee14b32f277b413c17cffefc927aee56fdad409
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk69Tp4ACgkQfXuS5UK5QB1ozAQAg36jPy5Lbj+CEo2y+FGVhrZr
-lQVpQfPcOnZ/SSjVMN6vb6XO+gRNR2qz67eyicrWm5CJTmU7NajwCa9npGMRBc4m
-Tan3fNgrSPMRIps19UWivW0WEw6JN1LqzFUqyFa8r4F0euHTzcL8PdQIWIPuoyPH
-bjnwnxsNhAhfAwsk6kc=
-=Qfjz
+iJwEAQEIAAYFAk7EMYoACgkQfXuS5UK5QB0ABwQAoqlw7yIOOreGh0ZXqDSHXCbm
+tGJFe4IzePSn+EqMCrBJWEcDfaPjgV17Sb0tC94IW47/+SqYwbeoxPeFKq61EZfU
++Oc1FYh8EC5K/oNBumCxp4kz/4EFP+hHdt3dT5PZVOMpp1hc4UlhnWK5nKyg5EED
+vRX01HnYmWGVYnndzVk=
+=o7n2
 -----END PGP SIGNATURE-----
